# telecom-customer-service

./: .env  .env.docker  .env.local  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.doc/: 0-ai智能客服计划说明书.md  1-ai电信智能客服-完整设计说明书.md  2-ai电信智能客服-第一阶段NLU模块完整设计文档.md  3-ai电信智能客服-第一阶段第三阶段Policy+NLG模块设计文档.md  3-ai电信智能客服-第一阶段第二阶段DST模块设计文档.md  4-ai电信智能客服-第一阶段第四阶段Web应用设计文档.md  5-电信套餐AI智能客服问题搜集.md  6-ai电信客服系统-确认功能完整设计方案-claude出.md
api/: main.py
api/routers/: chat.py  websocket.py
api/static/: index.html
config/: __init__.py  prompts.py  settings.py
core/: __init__.py  chatbot_dst.py  chatbot_nlu.py  chatbot_policy.py
core/dst/: StateManager.py  __init__.py  context_manager.py  dialog_state.py  dialog_state_tracker.py  slot_manager.py  state_store.py
core/evaluation/: __init__.py  quality_evaluator.py
core/nlg/: __init__.py  nlg_generator.py  response_formatter.py  templates.py
core/nlu/: __init__.py  function_definitions.py  nlu_engine.py  prompt_templates.py  result_validator.py  rule_definitions.py  rule_preprocessor.py
database/: __init__.py  db_manager.py  init_data.sql  redis_manager.py  schema.sql
examples/: dst_demo.py  nlu_demo.py  policy_demo.py
executor/: __init__.py  db_executor.py
models/: Package.py  user.py
tests/: test_api.py  test_comfirm.py  test_db_executor.py  test_dst.py  test_integration.py  test_integration_phase3.py  test_nlg.py  test_nlu.py  test_nlu_improved.py  test_policy.py  test_quality_evaluator.py  test_recommendation.py  test_websocket.py
utils/: __init__.py  cache.py  logger.py  validators.py
(+7 files in other folders)
