[project]
name = "telecom-customer-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.2",
    "loguru>=0.7.3",
    "openai>=2.0.0",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
